# Cities3D

trunk/Cities3D/: AUTHORS  ChangeLog  INSTALL.Linux  INSTALL.MacOSX  INSTALL.Win32  Makefile.am  README  RELEASE.Win32  acinclude.m4  configure.ac  copy_libraries.bat  vcprojtofilelist
trunk/Cities3D/distribute/: Makefile.am  Makefile.am.template
trunk/Cities3D/distribute/data/: mapkey.db  maps.db
trunk/Cities3D/distribute/locale/: README  format_mo_files.bat  gettext.bat  msgfmt.bat  msgmerge.bat  update_po_files.bat  xgettext.bat
trunk/Cities3D/distribute/options/: C&K_Basic_Game.xml  C&K_European_Deck.xml  C&K_Saboteur_Deck.xml  Standard_Basic_Game.xml
trunk/Cities3D/installer/: CitiesOnline.nsi
trunk/Cities3D/installer/mac/: cities3d.icns  create_app_bundles.sh  tex3d.icns  update_install_names.sh
trunk/Cities3D/mac/: CitiesOnline-Info.plist
trunk/Cities3D/mac/Cities3D.xcodeproj/: project.pbxproj
trunk/Cities3D/po/: Cities3D.pot  Makevars  POTFILES.in
trunk/Cities3D/src/: Makefile.am  Makefile.am.template  cities3d.sln
trunk/Cities3D/src/Cities3D/: Cities3D.bulkbuild.cpp  IconWindow.cpp  IconWindow.h  LayoutManager.cpp  LayoutManager.h  SettlersFrame.cpp  SettlersFrame.h  SplashDialog.cpp  SplashDialog.h  Strings.cpp  app.cpp  app.h  cities3d.rc  cities3d.vcproj  cities3d.xpm  stdwx.cpp
trunk/Cities3D/src/CitiesOnline/: CitiesOnline.bulkbuild.cpp  CitiesOnline.rc  CitiesOnline.vcproj  CitiesOnline.xpm  CitiesOnlineApp.cpp  CitiesOnlineApp.h  CitiesOnlineServer.cpp  CitiesOnlineServer.h  CitiesOnlineTaskbarIcon.cpp  CitiesOnlineTaskbarIcon.h  CommandThread.cpp  CommandThread.h  HostCheckServerThread.cpp  HostCheckServerThread.h  Launcher.cpp  Launcher.h  LocalServerThread.cpp  LocalServerThread.h  LoginDialog.cpp  LoginDialog.h  PortForwardManager.cpp  PortForwardManager.h  PortForwardThread.h  PortForwardThread_Win32.cpp  Process.h  Process_Darwin.cpp  Process_Linux.cpp  Process_Win32.cpp  Strings.cpp  Synchronizer.cpp  Synchronizer.h  stdwx.cpp  stdwx.h
trunk/Cities3D/src/CitiesOnlineRules/: CitiesOnlineRules.bulkbuild.cpp  CitiesOnlineRules.cpp  CitiesOnlineRules.vcproj  CitiesOnlineUI.cpp  CommandProcesser.cpp  CommandProcesser.h  ConnectCommand.cpp  HostCommand.cpp  ITransientCommand.h  LogicAllowSavesCitiesOnline.cpp  LogicIsCitiesOnline.cpp  LogicIsOutOfTime.cpp  OnlineUI.cpp  OnlineUI.h  RuleBeginBlockingActionCitiesOnline.cpp  RuleClientConnectionLostCitiesOnline.cpp  RuleConnectionLostInGameCitiesOnline.cpp  RuleEndBlockingActionCitiesOnline.cpp  RuleEndTurnCitiesOnline.cpp  RuleInitializeDataCitiesOnline.cpp  RuleInitializeOptionOverridesCitiesOnline.cpp  RulePassiveTimerDone.cpp  RulePerformGameActionCitiesOnline.cpp  RulePlayerReplaceCitiesOnline.cpp  RuleQuitCitiesOnline.cpp  RuleResetPassiveTime.cpp  RuleResetTurnTime.cpp  RuleRestartTurnCitiesOnline.cpp  RuleStartConnectCommandGame.cpp  RuleStartHostCommandGame.cpp  RuleStartSpectateCommandGame.cpp  RuleTurnTimerDone.cpp  RuleWinCitiesOnline.cpp  SpectateCommand.cpp  Strings.cpp  Synchronizer.cpp  TransientConnectCommand.cpp  TransientConnectCommand.h  TransientSpectateCommand.cpp  TransientSpectateCommand.h  (+1 more)
trunk/Cities3D/src/CitiesRules/: AlchemistDialog.cpp  AlchemistDialog.h  AqueductDialog.cpp  AqueductDialog.h  BankDataCities.cpp  BarbarianDelayName.cpp  BarbarianDelayOptions.cpp  BarbarianUI.cpp  BarbarianUI.h  BuildDataCities.cpp  CitiesGoldOption.cpp  CitiesKeyMaps.cpp  CitiesName.cpp  CitiesOptions.cpp  CitiesOverview.cpp  CitiesRules.bulkbuild.cpp  CitiesRules.cpp  CitiesRules.vcproj  CitiesSeafarersOptions.cpp  CitiesStats.cpp  CitiesUI.cpp  CommercialHarborCommodityDialog.cpp  CommercialHarborCommodityDialog.h  CommercialHarborPlayerDialog.cpp  CommercialHarborPlayerDialog.h  CommercialHarborResourceDialog.cpp  CommercialHarborResourceDialog.h  DeserterPlayerDialog.cpp  DeserterPlayerDialog.h  DiscardProgressCardListCtrl.cpp  DiscardProgressCardListCtrl.h  DiscardProgressCardsDialog.cpp  DiscardProgressCardsDialog.h  DrawKnightObject.cpp  DrawKnightObject.h  DrawMerchantObject.cpp  DrawMerchantObject.h  DrawMetropolisObject.cpp  DrawMetropolisObject.h  DrawWallsObject.cpp  (+312 more)
trunk/Cities3D/src/CoreRules/: BankTradeDialog.cpp  BankTradeDialog.h  BankUI.cpp  BankUI.h  BuildPopup.cpp  BuildPopup.h  BuildUI.cpp  BuildUI.h  BuildUIPanel.cpp  BuildUIPanel.h  ControlsUI.cpp  ControlsUI.h  CoreKeyMaps.cpp  CoreName.cpp  CoreOverview.cpp  CoreRules.bulkbuild.cpp  CoreRules.cpp  CoreRules.vcproj  CoreUI.cpp  DrawCornerSelectionObject.cpp  DrawCornerSelectionObject.h  DrawDummySelectionObject.cpp  DrawDummySelectionObject.h  DrawSideSelectionObject.cpp  DrawSideSelectionObject.h  ExitUI.cpp  FinalTradeBox.cpp  FinalTradeBox.h  GameListCtrl.cpp  GameListCtrl.h  GameSetupPane.cpp  GameSetupPane.h  HotseatUI.cpp  LayoutUI.cpp  LogicCardList.cpp  LogicCostNothing.cpp  LogicIsThisPlayer.cpp  LogicIsThisPlayerHotseat.cpp  LogicMarkBranch.cpp  LogicPlayerName.cpp  (+110 more)
trunk/Cities3D/src/DatabaseCore/: ColorInfoData.cpp  ColorInfoData.h  ConfigDatabase.cpp  ConfigDatabase.h  DatabaseCore.bulkbuild.cpp  DatabaseCore.vcproj  DatabaseExport.h  FilePath.cpp  FilePath.h  HashString.cpp  HashString.h  Image.cpp  Image.h  ImageEngine.cpp  ImageEngine.h  ImageSet.cpp  ImageSet.h  LanguageDatabase.cpp  LanguageDatabase.h  LocalSingleton.h  RNG.cpp  RNG.h  Singleton.h  SkinImages.cpp  SkinManager.cpp  SkinManager.h  Strings.cpp  TimerManager.cpp  TimerManager.h  stdwx.cpp
trunk/Cities3D/src/GLCore/: Animation.cpp  Animation.h  AnimationGameObject.h  AnimationPlacement.cpp  AnimationPlacement.h  AnimationRing.cpp  AnimationRing.h  BaseGLCanvas.cpp  BaseGLCanvas.h  CompositeAnimation.cpp  CompositeAnimation.h  CoreGLCanvas.cpp  CoreGLCanvas.h  DrawObject.cpp  DrawObject.h  FrameworkGLCanvas.cpp  FrameworkGLCanvas.h  GLCore.bulkbuild.cpp  GLCore.vcproj  GLExport.h  GLMaterial.cpp  GLMaterial.h  GLTextures.cpp  GLTextures.h  IAnimation.h  RenderTexture.cpp  RenderTexture.h  SettlersGLCanvas.cpp  SettlersGLCanvas.h  Strings.cpp  framebufferObject.cpp  framebufferObject.h  renderbuffer.cpp  renderbuffer.h  (+2 more)
(+3030 files in other folders)
