nobase_pkgdata_DATA = \
	data/mapkey.db \
	data/maps.db \
	\
	options/C&K_Basic_Game.xml \
	options/C&K_European_Deck.xml \
	options/C&K_Saboteur_Deck.xml \
	options/Standard_Basic_Game.xml \
	\
	skins/Brushed_Metal/Cities3D.xml \
	skins/Brushed_Metal/uibuttons.tex \
	skins/Brushed_Metal/uiicons.tex \
	skins/Standard/check1.png \
	skins/Standard/check2.png \
	skins/Standard/check3.png \
	skins/Standard/Cities3D.xml \
	skins/Standard/gtkrc \
	skins/Standard/line-h.png \
	skins/Standard/line-v.png \
	skins/Standard/option1.png \
	skins/Standard/option2.png \
	skins/Standard/option3.png \
	skins/Standard/shadow-gap.png \
	skins/Standard/shadow-gap-top.png \
	skins/Standard/shadow.png \
	skins/Standard/uibuttons.tex \
	skins/Standard/uiicons.tex \
	\
	locale/ca_ES/Cities3D.mo \
	locale/ca_ES/Cities3D.po \
	locale/ca_ES/CitiesOnlineRules.mo \
	locale/ca_ES/CitiesOnlineRules.po \
	locale/ca_ES/CitiesRules.mo \
	locale/ca_ES/CitiesRules.po \
	locale/ca_ES/CoreRules.mo \
	locale/ca_ES/CoreRules.po \
	locale/ca_ES/NetworkRules.mo \
	locale/ca_ES/NetworkRules.po \
	locale/ca_ES/SeafarersRules.mo \
	locale/ca_ES/SeafarersRules.po \
	locale/ca_ES/StandardRules.mo \
	locale/ca_ES/StandardRules.po \
	locale/ca_ES/TexEditor.mo \
	locale/ca_ES/TexEditor.po \
	locale/ca_ES/VolcanoRules.mo \
	locale/ca_ES/VolcanoRules.po \
	locale/cs_CZ/Cities3D.mo \
	locale/cs_CZ/Cities3D.po \
	locale/cs_CZ/CitiesOnlineRules.mo \
	locale/cs_CZ/CitiesOnlineRules.po \
	locale/cs_CZ/CitiesRules.mo \
	locale/cs_CZ/CitiesRules.po \
	locale/cs_CZ/CoreRules.mo \
	locale/cs_CZ/CoreRules.po \
	locale/cs_CZ/NetworkRules.mo \
	locale/cs_CZ/NetworkRules.po \
	locale/cs_CZ/SeafarersRules.mo \
	locale/cs_CZ/SeafarersRules.po \
	locale/cs_CZ/StandardRules.mo \
	locale/cs_CZ/StandardRules.po \
	locale/cs_CZ/TexEditor.mo \
	locale/cs_CZ/TexEditor.po \
	locale/cs_CZ/VolcanoRules.mo \
	locale/cs_CZ/VolcanoRules.po \
	locale/da_DK/Cities3D.mo \
	locale/da_DK/Cities3D.po \
	locale/da_DK/CitiesOnlineRules.mo \
	locale/da_DK/CitiesOnlineRules.po \
	locale/da_DK/CitiesRules.mo \
	locale/da_DK/CitiesRules.po \
	locale/da_DK/CoreRules.mo \
	locale/da_DK/CoreRules.po \
	locale/da_DK/NetworkRules.mo \
	locale/da_DK/NetworkRules.po \
	locale/da_DK/SeafarersRules.mo \
	locale/da_DK/SeafarersRules.po \
	locale/da_DK/StandardRules.mo \
	locale/da_DK/StandardRules.po \
	locale/da_DK/TexEditor.mo \
	locale/da_DK/TexEditor.po \
	locale/da_DK/VolcanoRules.mo \
	locale/da_DK/VolcanoRules.po \
	locale/de_AT/Cities3D.mo \
	locale/de_AT/Cities3D.po \
	locale/de_AT/CitiesOnlineRules.mo \
	locale/de_AT/CitiesOnlineRules.po \
	locale/de_AT/CitiesRules.mo \
	locale/de_AT/CitiesRules.po \
	locale/de_AT/CoreRules.mo \
	locale/de_AT/CoreRules.po \
	locale/de_AT/NetworkRules.mo \
	locale/de_AT/NetworkRules.po \
	locale/de_AT/SeafarersRules.mo \
	locale/de_AT/SeafarersRules.po \
	locale/de_AT/StandardRules.mo \
	locale/de_AT/StandardRules.po \
	locale/de_AT/TexEditor.mo \
	locale/de_AT/TexEditor.po \
	locale/de_AT/VolcanoRules.mo \
	locale/de_AT/VolcanoRules.po \
	locale/el_GR/Cities3D.mo \
	locale/el_GR/Cities3D.po \
	locale/el_GR/CitiesOnlineRules.mo \
	locale/el_GR/CitiesOnlineRules.po \
	locale/el_GR/CitiesRules.mo \
	locale/el_GR/CitiesRules.po \
	locale/el_GR/CoreRules.mo \
	locale/el_GR/CoreRules.po \
	locale/el_GR/NetworkRules.mo \
	locale/el_GR/NetworkRules.po \
	locale/el_GR/SeafarersRules.mo \
	locale/el_GR/SeafarersRules.po \
	locale/el_GR/StandardRules.mo \
	locale/el_GR/StandardRules.po \
	locale/el_GR/TexEditor.mo \
	locale/el_GR/TexEditor.po \
	locale/el_GR/VolcanoRules.mo \
	locale/el_GR/VolcanoRules.po \
	locale/en_US/Cities3D.mo \
	locale/en_US/Cities3D.po \
	locale/en_US/CitiesOnlineRules.mo \
	locale/en_US/CitiesOnlineRules.po \
	locale/en_US/CitiesRules.mo \
	locale/en_US/CitiesRules.po \
	locale/en_US/CoreRules.mo \
	locale/en_US/CoreRules.po \
	locale/en_US/NetworkRules.mo \
	locale/en_US/NetworkRules.po \
	locale/en_US/SeafarersRules.mo \
	locale/en_US/SeafarersRules.po \
	locale/en_US/StandardRules.mo \
	locale/en_US/StandardRules.po \
	locale/en_US/TexEditor.mo \
	locale/en_US/TexEditor.po \
	locale/en_US/VolcanoRules.mo \
	locale/en_US/VolcanoRules.po \
	locale/es_CO/Cities3D.mo \
	locale/es_CO/Cities3D.po \
	locale/es_CO/CitiesOnlineRules.mo \
	locale/es_CO/CitiesOnlineRules.po \
	locale/es_CO/CitiesRules.mo \
	locale/es_CO/CitiesRules.po \
	locale/es_CO/CoreRules.mo \
	locale/es_CO/CoreRules.po \
	locale/es_CO/NetworkRules.mo \
	locale/es_CO/NetworkRules.po \
	locale/es_CO/SeafarersRules.mo \
	locale/es_CO/SeafarersRules.po \
	locale/es_CO/StandardRules.mo \
	locale/es_CO/StandardRules.po \
	locale/es_CO/TexEditor.mo \
	locale/es_CO/TexEditor.po \
	locale/es_CO/VolcanoRules.mo \
	locale/es_CO/VolcanoRules.po \
	locale/fi_FI/Cities3D.mo \
	locale/fi_FI/Cities3D.po \
	locale/fi_FI/CitiesOnlineRules.mo \
	locale/fi_FI/CitiesOnlineRules.po \
	locale/fi_FI/CitiesRules.mo \
	locale/fi_FI/CitiesRules.po \
	locale/fi_FI/CoreRules.mo \
	locale/fi_FI/CoreRules.po \
	locale/fi_FI/NetworkRules.mo \
	locale/fi_FI/NetworkRules.po \
	locale/fi_FI/SeafarersRules.mo \
	locale/fi_FI/SeafarersRules.po \
	locale/fi_FI/StandardRules.mo \
	locale/fi_FI/StandardRules.po \
	locale/fi_FI/TexEditor.mo \
	locale/fi_FI/TexEditor.po \
	locale/fi_FI/VolcanoRules.mo \
	locale/fi_FI/VolcanoRules.po \
	locale/fr_FR/Cities3D.mo \
	locale/fr_FR/Cities3D.po \
	locale/fr_FR/CitiesOnlineRules.mo \
	locale/fr_FR/CitiesOnlineRules.po \
	locale/fr_FR/CitiesRules.mo \
	locale/fr_FR/CitiesRules.po \
	locale/fr_FR/CoreRules.mo \
	locale/fr_FR/CoreRules.po \
	locale/fr_FR/NetworkRules.mo \
	locale/fr_FR/NetworkRules.po \
	locale/fr_FR/SeafarersRules.mo \
	locale/fr_FR/SeafarersRules.po \
	locale/fr_FR/StandardRules.mo \
	locale/fr_FR/StandardRules.po \
	locale/fr_FR/TexEditor.mo \
	locale/fr_FR/TexEditor.po \
	locale/fr_FR/VolcanoRules.mo \
	locale/fr_FR/VolcanoRules.po \
	locale/hu_HU/Cities3D.mo \
	locale/hu_HU/Cities3D.po \
	locale/hu_HU/CitiesOnlineRules.mo \
	locale/hu_HU/CitiesOnlineRules.po \
	locale/hu_HU/CitiesRules.mo \
	locale/hu_HU/CitiesRules.po \
	locale/hu_HU/CoreRules.mo \
	locale/hu_HU/CoreRules.po \
	locale/hu_HU/NetworkRules.mo \
	locale/hu_HU/NetworkRules.po \
	locale/hu_HU/SeafarersRules.mo \
	locale/hu_HU/SeafarersRules.po \
	locale/hu_HU/StandardRules.mo \
	locale/hu_HU/StandardRules.po \
	locale/hu_HU/TexEditor.mo \
	locale/hu_HU/TexEditor.po \
	locale/hu_HU/VolcanoRules.mo \
	locale/hu_HU/VolcanoRules.po \
	locale/is_IS/Cities3D.mo \
	locale/is_IS/Cities3D.po \
	locale/is_IS/CitiesOnlineRules.mo \
	locale/is_IS/CitiesOnlineRules.po \
	locale/is_IS/CitiesRules.mo \
	locale/is_IS/CitiesRules.po \
	locale/is_IS/CoreRules.mo \
	locale/is_IS/CoreRules.po \
	locale/is_IS/NetworkRules.mo \
	locale/is_IS/NetworkRules.po \
	locale/is_IS/SeafarersRules.mo \
	locale/is_IS/SeafarersRules.po \
	locale/is_IS/StandardRules.mo \
	locale/is_IS/StandardRules.po \
	locale/is_IS/TexEditor.mo \
	locale/is_IS/TexEditor.po \
	locale/is_IS/VolcanoRules.mo \
	locale/is_IS/VolcanoRules.po \
	locale/it_IT/Cities3D.mo \
	locale/it_IT/Cities3D.po \
	locale/it_IT/CitiesOnlineRules.mo \
	locale/it_IT/CitiesOnlineRules.po \
	locale/it_IT/CitiesRules.mo \
	locale/it_IT/CitiesRules.po \
	locale/it_IT/CoreRules.mo \
	locale/it_IT/CoreRules.po \
	locale/it_IT/NetworkRules.mo \
	locale/it_IT/NetworkRules.po \
	locale/it_IT/SeafarersRules.mo \
	locale/it_IT/SeafarersRules.po \
	locale/it_IT/StandardRules.mo \
	locale/it_IT/StandardRules.po \
	locale/it_IT/TexEditor.mo \
	locale/it_IT/TexEditor.po \
	locale/it_IT/VolcanoRules.mo \
	locale/it_IT/VolcanoRules.po \
	locale/ja_JP/Cities3D.mo \
	locale/ja_JP/Cities3D.po \
	locale/ja_JP/CitiesOnlineRules.mo \
	locale/ja_JP/CitiesOnlineRules.po \
	locale/ja_JP/CitiesRules.mo \
	locale/ja_JP/CitiesRules.po \
	locale/ja_JP/CoreRules.mo \
	locale/ja_JP/CoreRules.po \
	locale/ja_JP/NetworkRules.mo \
	locale/ja_JP/NetworkRules.po \
	locale/ja_JP/SeafarersRules.mo \
	locale/ja_JP/SeafarersRules.po \
	locale/ja_JP/StandardRules.mo \
	locale/ja_JP/StandardRules.po \
	locale/ja_JP/TexEditor.mo \
	locale/ja_JP/TexEditor.po \
	locale/ja_JP/VolcanoRules.mo \
	locale/ja_JP/VolcanoRules.po \
	locale/ko_KR/Cities3D.mo \
	locale/ko_KR/Cities3D.po \
	locale/ko_KR/CitiesOnlineRules.mo \
	locale/ko_KR/CitiesOnlineRules.po \
	locale/ko_KR/citiesrules.mo \
	locale/ko_KR/CitiesRules.po \
	locale/ko_KR/corerules.mo \
	locale/ko_KR/CoreRules.po \
	locale/ko_KR/networkrules.mo \
	locale/ko_KR/NetworkRules.po \
	locale/ko_KR/SeafarersRules.mo \
	locale/ko_KR/SeafarersRules.po \
	locale/ko_KR/seafaresrules.mo \
	locale/ko_KR/standardrules.mo \
	locale/ko_KR/StandardRules.po \
	locale/ko_KR/TexEditor.mo \
	locale/ko_KR/TexEditor.po \
	locale/ko_KR/VolcanoRules.mo \
	locale/ko_KR/VolcanoRules.po \
	locale/nl_BE/Cities3D.mo \
	locale/nl_BE/Cities3D.po \
	locale/nl_BE/CitiesOnlineRules.mo \
	locale/nl_BE/CitiesOnlineRules.po \
	locale/nl_BE/CitiesRules.mo \
	locale/nl_BE/CitiesRules.po \
	locale/nl_BE/CoreRules.mo \
	locale/nl_BE/CoreRules.po \
	locale/nl_BE/NetworkRules.mo \
	locale/nl_BE/NetworkRules.po \
	locale/nl_BE/SeafarersRules.mo \
	locale/nl_BE/SeafarersRules.po \
	locale/nl_BE/StandardRules.mo \
	locale/nl_BE/StandardRules.po \
	locale/nl_BE/TexEditor.mo \
	locale/nl_BE/TexEditor.po \
	locale/nl_BE/VolcanoRules.mo \
	locale/nl_BE/VolcanoRules.po \
	locale/nl_NL/Cities3D.mo \
	locale/nl_NL/Cities3D.po \
	locale/nl_NL/CitiesOnlineRules.mo \
	locale/nl_NL/CitiesOnlineRules.po \
	locale/nl_NL/CitiesRules.mo \
	locale/nl_NL/CitiesRules.po \
	locale/nl_NL/CoreRules.mo \
	locale/nl_NL/CoreRules.po \
	locale/nl_NL/NetworkRules.mo \
	locale/nl_NL/NetworkRules.po \
	locale/nl_NL/SeafarersRules.mo \
	locale/nl_NL/SeafarersRules.po \
	locale/nl_NL/StandardRules.mo \
	locale/nl_NL/StandardRules.po \
	locale/nl_NL/TexEditor.mo \
	locale/nl_NL/TexEditor.po \
	locale/nl_NL/VolcanoRules.mo \
	locale/nl_NL/VolcanoRules.po \
	locale/pl_PL/Cities3D.mo \
	locale/pl_PL/Cities3D.po \
	locale/pl_PL/CitiesOnlineRules.mo \
	locale/pl_PL/CitiesOnlineRules.po \
	locale/pl_PL/CitiesRules.mo \
	locale/pl_PL/CitiesRules.po \
	locale/pl_PL/CoreRules.mo \
	locale/pl_PL/CoreRules.po \
	locale/pl_PL/NetworkRules.mo \
	locale/pl_PL/NetworkRules.po \
	locale/pl_PL/SeafarersRules.mo \
	locale/pl_PL/SeafarersRules.po \
	locale/pl_PL/StandardRules.mo \
	locale/pl_PL/StandardRules.po \
	locale/pl_PL/TexEditor.mo \
	locale/pl_PL/TexEditor.po \
	locale/pl_PL/VolcanoRules.mo \
	locale/pl_PL/VolcanoRules.po \
	locale/pt_PT/Cities3D.mo \
	locale/pt_PT/Cities3D.po \
	locale/pt_PT/CitiesOnlineRules.mo \
	locale/pt_PT/CitiesOnlineRules.po \
	locale/pt_PT/CitiesRules.mo \
	locale/pt_PT/CitiesRules.po \
	locale/pt_PT/CoreRules.mo \
	locale/pt_PT/CoreRules.po \
	locale/pt_PT/NetworkRules.mo \
	locale/pt_PT/NetworkRules.po \
	locale/pt_PT/SeafarersRules.mo \
	locale/pt_PT/SeafarersRules.po \
	locale/pt_PT/StandardRules.mo \
	locale/pt_PT/StandardRules.po \
	locale/pt_PT/TexEditor.mo \
	locale/pt_PT/TexEditor.po \
	locale/pt_PT/VolcanoRules.mo \
	locale/pt_PT/VolcanoRules.po \
	locale/ru_RU/Cities3D.mo \
	locale/ru_RU/Cities3D.po \
	locale/ru_RU/CitiesOnlineRules.mo \
	locale/ru_RU/CitiesOnlineRules.po \
	locale/ru_RU/CitiesRules.mo \
	locale/ru_RU/CitiesRules.po \
	locale/ru_RU/CoreRules.mo \
	locale/ru_RU/CoreRules.po \
	locale/ru_RU/NetworkRules.mo \
	locale/ru_RU/NetworkRules.po \
	locale/ru_RU/SeafarersRules.mo \
	locale/ru_RU/SeafarersRules.po \
	locale/ru_RU/StandardRules.mo \
	locale/ru_RU/StandardRules.po \
	locale/ru_RU/TexEditor.mo \
	locale/ru_RU/TexEditor.po \
	locale/ru_RU/VolcanoRules.mo \
	locale/ru_RU/VolcanoRules.po \
	locale/sv_SE/Cities3D.mo \
	locale/sv_SE/Cities3D.po \
	locale/sv_SE/CitiesOnlineRules.mo \
	locale/sv_SE/CitiesOnlineRules.po \
	locale/sv_SE/CitiesRules.mo \
	locale/sv_SE/CitiesRules.po \
	locale/sv_SE/CoreRules.mo \
	locale/sv_SE/CoreRules.po \
	locale/sv_SE/NetworkRules.mo \
	locale/sv_SE/NetworkRules.po \
	locale/sv_SE/SeafarersRules.mo \
	locale/sv_SE/SeafarersRules.po \
	locale/sv_SE/StandardRules.mo \
	locale/sv_SE/StandardRules.po \
	locale/sv_SE/TexEditor.mo \
	locale/sv_SE/TexEditor.po \
	locale/sv_SE/VolcanoRules.mo \
	locale/sv_SE/VolcanoRules.po \
	locale/tr_TR/Cities3D.mo \
	locale/tr_TR/Cities3D.po \
	locale/tr_TR/CitiesOnlineRules.mo \
	locale/tr_TR/CitiesOnlineRules.po \
	locale/tr_TR/CitiesRules.mo \
	locale/tr_TR/CitiesRules.po \
	locale/tr_TR/CoreRules.mo \
	locale/tr_TR/CoreRules.po \
	locale/tr_TR/NetworkRules.mo \
	locale/tr_TR/NetworkRules.po \
	locale/tr_TR/SeafarersRules.mo \
	locale/tr_TR/SeafarersRules.po \
	locale/tr_TR/StandardRules.mo \
	locale/tr_TR/StandardRules.po \
	locale/tr_TR/TexEditor.mo \
	locale/tr_TR/TexEditor.po \
	locale/tr_TR/VolcanoRules.mo \
	locale/tr_TR/VolcanoRules.po \
	\
	sounds/Standard/ActivateKnight.mp3 \
	sounds/Standard/AttackKnight.mp3 \
	sounds/Standard/BarbarianAdvance.mp3 \
	sounds/Standard/BarbarianDefend.mp3 \
	sounds/Standard/BarbarianPillage.mp3 \
	sounds/Standard/BuyDevelopmentCard.mp3 \
	sounds/Standard/ChargeKnight.mp3 \
	sounds/Standard/ChatMessageReceived.mp3 \
	sounds/Standard/CityReduced.mp3 \
	sounds/Standard/DestroyKnight.mp3 \
	sounds/Standard/DiscardProgressCard.mp3 \
	sounds/Standard/EarnExtraPoints.mp3 \
	sounds/Standard/EndTurn.mp3 \
	sounds/Standard/ExpelCriminals.mp3 \
	sounds/Standard/GiveWeddingGift.mp3 \
	sounds/Standard/LargestArmy.mp3 \
	sounds/Standard/LongestRoad.mp3 \
	sounds/Standard/LoseCardsOn7.mp3 \
	sounds/Standard/LoseGame.mp3 \
	sounds/Standard/LowOnTime.mp3 \
	sounds/Standard/MoveKnight.mp3 \
	sounds/Standard/MoveShip.mp3 \
	sounds/Standard/NoSteal.mp3 \
	sounds/Standard/OutOfTime.mp3 \
	sounds/Standard/PassiveQuit.mp3 \
	sounds/Standard/PlaceCity.mp3 \
	sounds/Standard/PlaceCityWalls.mp3 \
	sounds/Standard/PlaceDeserterKnight.mp3 \
	sounds/Standard/PlaceKnight1.mp3 \
	sounds/Standard/PlaceMerchant.mp3 \
	sounds/Standard/PlaceMetropolis.mp3 \
	sounds/Standard/PlacePirate.mp3 \
	sounds/Standard/PlaceRoad.mp3 \
	sounds/Standard/PlaceRobber.mp3 \
	sounds/Standard/PlaceSettlement.mp3 \
	sounds/Standard/PlaceSettlementOnPort.mp3 \
	sounds/Standard/PlaceShip.mp3 \
	sounds/Standard/PlayAlchemistCard.mp3 \
	sounds/Standard/PlayArsonistCard.mp3 \
	sounds/Standard/PlayBishopCard.mp3 \
	sounds/Standard/PlayCommercialHarborCard.mp3 \
	sounds/Standard/PlayCraneCard.mp3 \
	sounds/Standard/PlayDeserterCard.mp3 \
	sounds/Standard/PlayDiplomatCard.mp3 \
	sounds/Standard/PlayEngineerCard.mp3 \
	sounds/Standard/PlayerJoin.mp3 \
	sounds/Standard/PlayerLeave.mp3 \
	sounds/Standard/PlayIntrigueCard.mp3 \
	sounds/Standard/PlayInventorCard.mp3 \
	sounds/Standard/PlayIrrigationCard.mp3 \
	sounds/Standard/PlayMasterMerchantCard.mp3 \
	sounds/Standard/PlayMedicineCard.mp3 \
	sounds/Standard/PlayMerchantFleetCard.mp3 \
	sounds/Standard/PlayMiningCard.mp3 \
	sounds/Standard/PlayMonopolyCard.mp3 \
	sounds/Standard/PlayRoadBuildingCard.mp3 \
	sounds/Standard/PlaySaboteurCard.mp3 \
	sounds/Standard/PlaySmithCard.mp3 \
	sounds/Standard/PlaySoldierCard.mp3 \
	sounds/Standard/PlaySpyCard.mp3 \
	sounds/Standard/PlayVPCard.mp3 \
	sounds/Standard/PlayWarlordCard.mp3 \
	sounds/Standard/PlayWeddingCard.mp3 \
	sounds/Standard/PlayYearOfPlentyCard.mp3 \
	sounds/Standard/ReceiveProgressCard.mp3 \
	sounds/Standard/RepairCity.mp3 \
	sounds/Standard/RollDice.mp3 \
	sounds/Standard/SelectDeserterKnight.mp3 \
	sounds/Standard/SelectDiplomatRoad.mp3 \
	sounds/Standard/SelectIntrigueKnight.mp3 \
	sounds/Standard/SelectSaboteurCity.mp3 \
	sounds/Standard/StealACard.mp3 \
	sounds/Standard/SwitchRollChips.mp3 \
	sounds/Standard/TradeAccept.mp3 \
	sounds/Standard/TradeCounter.mp3 \
	sounds/Standard/TradeExecute.mp3 \
	sounds/Standard/TradeOffer.mp3 \
	sounds/Standard/TradeRefuse.mp3 \
	sounds/Standard/TradeReject.mp3 \
	sounds/Standard/TradeSelect.mp3 \
	sounds/Standard/TradeToBank.mp3 \
	sounds/Standard/UndoAction.mp3 \
	sounds/Standard/UpgradeKnight2.mp3 \
	sounds/Standard/UpgradeKnight3.mp3 \
	sounds/Standard/UpgradePolitics.mp3 \
	sounds/Standard/UpgradeScience.mp3 \
	sounds/Standard/UpgradeTrade.mp3 \
	sounds/Standard/UseOneTurnTimer.mp3 \
	sounds/Standard/VolcanicDestruction.mp3 \
	sounds/Standard/VolcanicEruption.mp3 \
	sounds/Standard/WinGame.mp3 \
	sounds/Standard/YouNeedToDoSomething.mp3 \
	sounds/Standard/YourTurn.mp3 \
	\
	tex/Impressionist/glseaports.tex \
	tex/Impressionist/gltilegold.tex \
	tex/Impressionist/gltilehidden.tex \
	tex/Impressionist/gltilejungle.tex \
	tex/Impressionist/gltilestandard.tex \
	tex/Impressionist/gltilevolcano.tex \
	tex/Impressionist_Small/gltilegold.tex \
	tex/Impressionist_Small/gltilehidden.tex \
	tex/Impressionist_Small/gltilejungle.tex \
	tex/Impressionist_Small/gltilestandard.tex \
	tex/Impressionist_Small/gltilevolcano.tex \
	tex/Impressionist/uicardsdev.tex \
	tex/Impressionist/uicomcard.tex \
	tex/Impressionist/uigoldcard.tex \
	tex/Impressionist/uiprocard.tex \
	tex/Impressionist/uirescard.tex \
	tex/Standard/glbarbarians.tex \
	tex/Standard/glchips.tex \
	tex/Standard/glcity.tex \
	tex/Standard/glextra.tex \
	tex/Standard/glknights.tex \
	tex/Standard/glroad.tex \
	tex/Standard/glseaports.tex \
	tex/Standard/glsettlement.tex \
	tex/Standard/glship.tex \
	tex/Standard/gltilegold.tex \
	tex/Standard/gltilehidden.tex \
	tex/Standard/gltilejungle.tex \
	tex/Standard/gltilestandard.tex \
	tex/Standard/gltilevolcano.tex \
	tex/Standard/glwalls.tex \
	tex/Standard_Small/gltilegold.tex \
	tex/Standard_Small/gltilehidden.tex \
	tex/Standard_Small/gltilejungle.tex \
	tex/Standard_Small/gltilestandard.tex \
	tex/Standard_Small/gltilevolcano.tex \
	tex/Standard/uibuildck.tex \
	tex/Standard/uibuilddevcard.tex \
	tex/Standard/uibuildship.tex \
	tex/Standard/uibuild.tex \
	tex/Standard/uicardsdev.tex \
	tex/Standard/uicardspolitics.tex \
	tex/Standard/uicardsscience.tex \
	tex/Standard/uicardstrade.tex \
	tex/Standard/uicomcard.tex \
	tex/Standard/uidevcard.tex \
	tex/Standard/uidiceck.tex \
	tex/Standard/uidicered.tex \
	tex/Standard/uidice.tex \
	tex/Standard/uigoldcard.tex \
	tex/Standard/uiicons.tex \
	tex/Standard/uiplayerck.tex \
	tex/Standard/uipointsck.tex \
	tex/Standard/uipointsdev.tex \
	tex/Standard/uipoints.tex \
	tex/Standard/uiprocard.tex \
	tex/Standard/uirescard.tex \
	tex/Standard/uisplash.tex
